# coinmarket

./: .gitignore
backend/: .env  pyproject.toml
backend/src/: config.py  http_cline.py  init.py  main.py  router.py
backend/src/db/: database.py  models.py  request.py  schemas.py
frontend/: .env  .firebaserc  index.html  package-lock.json  package.json  vite.config.js
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.jsx
frontend/src/components/: CryptocurrencyCard.jsx
